--- a/src/App.css
+++ b/src/App.css
@@ -206,7 +206,6 @@ nav .navbar .nav-btn a{
 }
 .frame139{
   box-sizing: border-box;
-  /* position: absolute; */
   width: 100%;
   height: 774px;
   left: 0px;
@@ -425,6 +424,10 @@ color: #000000;
       font-size: 28px;
     }
     .footer .row{
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+    }
+    .frame139 .row{
       display: grid;
       grid-template-columns: repeat(2, 1fr);
     }
